    - new vpForceTwistMatrix class that allows to transfer a force/torque skew
      from one frame to an other.
    - new vpVelocityTwistMatrix class that allows to transfer a velocity skew
      from one frame to an other. The vpTwistMatrix class is from now 
      deprecated.
    - Copy constructors were added to better support stl lists and vectors.
    - Add of a new wireframe simulator.
  - Bug fixed
    - [9476] Memory leak in vpImageIo::readPNG() functions.	
  - Improvements
    - Change the FindOpenCV.cmake in order to detect automatically OpenCV 1.1, 2.0 and 2.1.
----------------------------------------------	
ViSP 2.4.4 (released January 8th, 2010)
  - Features removed
    - vpMePath has been removed.
----------------------------------------------	
ViSP 2.4.4-rc1 (released December 21th, 2009)
  - New Features
    - During CMake configuration, when a third-party library is detected,
      it is now possible to turn off the default usage of the library.
    - Warning during the build if deprecated functions are used
    - For the Irisa's Afma6 robot addition of a new vacuum tool (vpAfma6).
    - New vpImagePoint class for image point coordinates.
    - New vpPlot class that enables real time drawing of graphics under Unix.
    - Ability to use other colors than the predefined ones with the rewriting 
      of the vpColor class and modifications in display functionalities.
    - New vpKalmanFilter and vpLinearKalmanFilterInstantiation classes with 
      velocity and acceleration state models.
    - New vpFeatureTranslation: ctc*
    - New USE_COIN_SIMULATOR option during CMake configuration to enable or 
      disable simulation capabilities based on Coin3D suite.
    - New vpViper, vpViper850 and vpRobotViper850 classes to provide an 
      interface for Inria's Adept Viper 850 robot.
    - New vpBSpline and vpNurbs classes to manipulate 2D BSpline and 
      2D Nurbs (Non Uniform Rational BSpline).
    - New vpMeNurbs class to track object edges.