@@ -2178,6 +2178,46 @@ vpRobotViper850::getForceTorque(vpColVector &H)
 			    "Cannot get force/torque measures.");
   }
 }
+/*!
+
+  Open the electric two fingers Schunk gripper.
+
+  \sa closeGripper()
+*/
+void
+vpRobotViper850::openGripper()
+{
+  InitTry;
+  Try( PrimitiveGripper_Viper850(1) );
+  std::cout << "Open the gripper..." << std::endl; 
+  CatchPrint();
+  if (TryStt < 0) {
+    vpERROR_TRACE ("Cannot open the gripper");
+    throw vpRobotException (vpRobotException::lowLevelError,
+			      "Cannot open the gripper.");
+  }
+}
+
+/*!
+
+  Close the electric two fingers Schunk gripper.
+ 
+  \sa openGripper()
+
+*/
+void
+vpRobotViper850::closeGripper()
+{
+  InitTry;
+  Try( PrimitiveGripper_Viper850(0) );
+  std::cout << "Close the gripper..." << std::endl; 
+  CatchPrint();
+  if (TryStt < 0) {
+    vpERROR_TRACE ("Cannot close the gripper");
+    throw vpRobotException (vpRobotException::lowLevelError,
+			      "Cannot close the gripper.");
+  }
+}
 
 
 /*
