@@ -15,6 +15,8 @@ ViSP (Subversion trunk)
       deprecated.
     - Copy constructors were added to better support stl lists and vectors.
     - Add of a new wireframe simulator.
+    - In vpRobotViper850 add openGripper() and closeGripper() functions to 
+      control the Schunk two fingers electric gripper.
   - Bug fixed
     - [9476] Memory leak in vpImageIo::readPNG() functions.	
   - Improvements
